--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,9 @@ deploy:
   env: "ReactDockerApp-env"
   bucket_name: "elasticbeanstalk-us-east-2-625646260104"
   bucket_path: "react-docker-app"
-    on:
-      branch: master
+  on:
+    branch: master
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
   
